// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boxer renders correctly with 3 childs 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <h1>
      Header 1
    </h1>
  </div>
  <div
    class="emotion-0 emotion-1"
  >
    <h2>
      Header 2
    </h2>
  </div>
  <div
    class="emotion-0 emotion-1"
  >
    <p>
      paragraph
    </p>
  </div>
</DocumentFragment>
`;

exports[`Boxer renders correctly with one child 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <p>
      Test
    </p>
  </div>
</DocumentFragment>
`;
